[gd_scene load_steps=7 format=3 uid="uid://cd2riq6hiri11"]

[ext_resource type="Script" path="res://scenes/screens/dialogue_screen.gd" id="1_nvb26"]
[ext_resource type="Texture2D" uid="uid://30s7onh800ft" path="res://paint.net/character_1_idle.png" id="2_lf0xu"]
[ext_resource type="Texture2D" uid="uid://w7v70wcgdut1" path="res://paint.net/character_2_idle.png" id="3_f3ppd"]
[ext_resource type="Texture2D" uid="uid://bl0koufa5o6ig" path="res://paint.net/textbox.png" id="3_u1tam"]
[ext_resource type="PackedScene" uid="uid://cbberq0ank6ep" path="res://scenes/widgets/rich_text_button.tscn" id="5_hqora"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_282tx"]
load_path = "res://.godot/imported/textbox.png-20b8745e4bfd6780453ea28239731bcb.ctex"

[node name="DialogueScreen" type="Node"]
process_mode = 3
script = ExtResource("1_nvb26")

[node name="UI" type="CanvasLayer" parent="."]
visible = false

[node name="BackgroundTint" type="Panel" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Window" type="PanelContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Window"]
offset_right = 1152.0
offset_bottom = 648.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UI/Window/HBoxContainer"]
offset_right = 574.0
offset_bottom = 648.0
size_flags_horizontal = 3
stretch_mode = 1

[node name="LeftCharacter" type="TextureRect" parent="UI/Window/HBoxContainer/AspectRatioContainer"]
unique_name_in_owner = true
texture_filter = 1
offset_left = -37.0
offset_right = 611.0
offset_bottom = 648.0
texture = ExtResource("2_lf0xu")

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="UI/Window/HBoxContainer"]
offset_left = 578.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
stretch_mode = 1

[node name="RightCharacter" type="TextureRect" parent="UI/Window/HBoxContainer/AspectRatioContainer2"]
unique_name_in_owner = true
texture_filter = 1
offset_left = -37.0
offset_right = 611.0
offset_bottom = 648.0
texture = ExtResource("3_f3ppd")
flip_h = true

[node name="MarginContainer" type="MarginContainer" parent="UI/Window"]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Window/MarginContainer"]
offset_left = 64.0
offset_top = 110.0
offset_right = 1088.0
offset_bottom = 584.0
size_flags_vertical = 8

[node name="TextBox" type="PanelContainer" parent="UI/Window/MarginContainer/VBoxContainer"]
offset_right = 1024.0
offset_bottom = 98.0

[node name="NinePatchRect" type="NinePatchRect" parent="UI/Window/MarginContainer/VBoxContainer/TextBox"]
offset_right = 1024.0
offset_bottom = 98.0
texture = ExtResource("3_u1tam")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TextMargin" type="MarginContainer" parent="UI/Window/MarginContainer/VBoxContainer/TextBox"]
offset_right = 1024.0
offset_bottom = 98.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Text" type="RichTextLabel" parent="UI/Window/MarginContainer/VBoxContainer/TextBox/TextMargin"]
unique_name_in_owner = true
offset_left = 32.0
offset_top = 32.0
offset_right = 992.0
offset_bottom = 66.0
size_flags_vertical = 8
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
bbcode_enabled = true
text = "Hello, world!"
fit_content_height = true

[node name="OptionsBox" type="PanelContainer" parent="UI/Window/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 102.0
offset_right = 1024.0
offset_bottom = 270.0

[node name="NinePatchRect" type="NinePatchRect" parent="UI/Window/MarginContainer/VBoxContainer/OptionsBox"]
offset_right = 1024.0
offset_bottom = 168.0
texture = SubResource("CompressedTexture2D_282tx")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TextMargin" type="MarginContainer" parent="UI/Window/MarginContainer/VBoxContainer/OptionsBox"]
offset_right = 1024.0
offset_bottom = 168.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="UI/Window/MarginContainer/VBoxContainer/OptionsBox/TextMargin"]
offset_left = 16.0
offset_top = 16.0
offset_right = 1008.0
offset_bottom = 356.0
columns = 2

[node name="Option1" parent="UI/Window/MarginContainer/VBoxContainer/OptionsBox/TextMargin/GridContainer" node_paths=PackedStringArray("first_button") instance=ExtResource("5_hqora")]
unique_name_in_owner = true
offset_right = 494.0
offset_bottom = 66.0
size_flags_horizontal = 3
focus_next = NodePath("../Option2")
focus_previous = NodePath("../Option4")
first_button = NodePath(".")

[node name="Option2" parent="UI/Window/MarginContainer/VBoxContainer/OptionsBox/TextMargin/GridContainer" node_paths=PackedStringArray("first_button") instance=ExtResource("5_hqora")]
unique_name_in_owner = true
offset_left = 498.0
offset_right = 992.0
offset_bottom = 66.0
size_flags_horizontal = 3
focus_next = NodePath("../Option3")
focus_previous = NodePath("../Option1")
first_button = NodePath("../Option1")

[node name="Option3" parent="UI/Window/MarginContainer/VBoxContainer/OptionsBox/TextMargin/GridContainer" node_paths=PackedStringArray("first_button") instance=ExtResource("5_hqora")]
unique_name_in_owner = true
offset_top = 70.0
offset_right = 494.0
offset_bottom = 136.0
size_flags_horizontal = 3
focus_next = NodePath("../Option4")
focus_previous = NodePath("../Option2")
first_button = NodePath("../Option1")

[node name="Option4" parent="UI/Window/MarginContainer/VBoxContainer/OptionsBox/TextMargin/GridContainer" node_paths=PackedStringArray("first_button") instance=ExtResource("5_hqora")]
unique_name_in_owner = true
offset_left = 498.0
offset_top = 70.0
offset_right = 992.0
offset_bottom = 136.0
size_flags_horizontal = 3
focus_next = NodePath("../Option1")
focus_previous = NodePath("../Option3")
first_button = NodePath("../Option1")

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InputCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="pressed" from="UI/Window/MarginContainer/VBoxContainer/OptionsBox/TextMargin/GridContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="UI/Window/MarginContainer/VBoxContainer/OptionsBox/TextMargin/GridContainer/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="UI/Window/MarginContainer/VBoxContainer/OptionsBox/TextMargin/GridContainer/Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="UI/Window/MarginContainer/VBoxContainer/OptionsBox/TextMargin/GridContainer/Option4" to="." method="_on_option_4_pressed"]
[connection signal="timeout" from="InputCooldown" to="." method="_on_input_cooldown_timeout"]
